--- a/Copy_of_Global_Terrorism_Analysis_Capstone_Project.ipynb
+++ b/Copy_of_Global_Terrorism_Analysis_Capstone_Project.ipynb
@@ -6,7 +6,7 @@
       "name": "Copy of Global Terrorism Analysis - Capstone Project.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMou+wpygYDJagFtuYshE+W",
+      "authorship_tag": "ABX9TyPZdm6kmoUkDOJqPPoIupPI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -118,7 +118,8 @@
         "              2. Dealing with null values.\n",
         "  * Part 2 = **Data Analysis**\n",
         "\n",
-        "            \n",
+        "              1. Preliminary Analysis.\n",
+        "              2. Comparison of Indian and Iraq Terrorism.\n",
         "\n",
         "So let's begin with **Data Cleaning**"
       ],
@@ -4703,7 +4704,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## What the terror organisations target the most in India and in Iraq.\n"
+        "## Name the Terror organisations and what they target the most in both the countries.\n"
       ],
       "metadata": {
         "id": "F2wowGcefSns"
@@ -4712,6 +4713,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Subsetting the dataset without the Unknown values.\n",
         "india_no_na_org = india_df[india_df['organisation'] != 'Unknown']\n",
         "iraq_no_na_org = iraq_df[iraq_df['organisation'] != 'Unknown']"
       ],
@@ -4793,12 +4795,40 @@
       "source": [
         "**The main diffrence between India and Iraq is -**\n",
         "\n",
-        "**In India, Maoists groups target various groups of societies**.\n",
+        "**In India, Maoists target various groups of societies like Police, Government etc..**.\n",
         "\n",
-        "**In Iraq, Terrorist organisations target groups of various societies**."
+        "**In Iraq, Al-Qaida,ISIL terrorist organisations target groups of societies like Citizens, Business, etc..**."
       ],
       "metadata": {
         "id": "OVBk57yjm50o"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Insights Derived from analysing the data**."
+      ],
+      "metadata": {
+        "id": "pyzf96_fR33J"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "* *Taliban is the most successful terrorist organisation.*\n",
+        "* *Killed and Wounded are the only 2 features that have some form of influence among each other and the relationship is a positive one.*\n",
+        "* *The most number of attacks took place in the year 2014.*\n",
+        "* *Terorist attacks take place through out all the months of a year.*\n",
+        "* *A large portion of terror attacks took place in Iraq.*\n",
+        "* *The medians of killed and wounded are approximately the same, but the distribution of both vary.*\n",
+        "* *The most attacked region is middle-east and north africa.*\n",
+        "* *Conclusions from analysing Indian terrorism and Iraq Terrorism-*\n",
+        "    1. *All the cities in India counter terrorism better than all the cities in Iraq.*\n",
+        "    2. *The forms of attacks used in both the countries is similar.*\n",
+        "    3. *In India only one terror organization target the groups of societies whereas in Iraq 2 terror organizations target the groups of societies.*"
+      ],
+      "metadata": {
+        "id": "JzoF3vEJSF3U"
       }
     }
   ]
